{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 251,
  "lineage": "b8d27e35-4fb8-d22b-e2f2-0e8f9819320b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:019668444105:loadbalancer/mediawiki-lb",
            "availability_zones": [
              "ap-south-1a",
              "ap-south-1b"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "mediawiki-lb-751915905.ap-south-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 10,
                "interval": 30,
                "target": "TCP:80",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "mediawiki-lb",
            "idle_timeout": 60,
            "instances": [
              "i-044f09d609b5a9081",
              "i-058a2e748d3cb1a5e"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "mediawiki-lb",
            "security_groups": [
              "sg-0144c283f1717884a"
            ],
            "source_security_group": "019668444105/elb_sg",
            "source_security_group_id": "sg-0144c283f1717884a",
            "subnets": [
              "subnet-038e0623e9459ee0b",
              "subnet-0b0745a8f9b99617b"
            ],
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_instance.mediawiki",
            "aws_security_group.allow-ssh-http",
            "aws_security_group.elb-sg",
            "aws_subnet.subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "mediawiki",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-052c08d70def0ac62",
            "arn": "arn:aws:ec2:ap-south-1:019668444105:instance/i-044f09d609b5a9081",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-044f09d609b5a9081",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aditya",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b3b47cedadf0a2cc",
            "private_dns": "ip-10-1-0-153.ap-south-1.compute.internal",
            "private_ip": "10.1.0.153",
            "public_ip": "13.126.144.121",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0908708c3d631e02a",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b0745a8f9b99617b",
            "tags": {
              "Name": "MediaWiki-Blue"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c7f8655f25796f86"
            ]
          },
          "dependencies": [
            "aws_security_group.allow-ssh-http",
            "aws_subnet.subnet",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-052c08d70def0ac62",
            "arn": "arn:aws:ec2:ap-south-1:019668444105:instance/i-058a2e748d3cb1a5e",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-058a2e748d3cb1a5e",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aditya",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-01c8ecab37a75d514",
            "private_dns": "ip-10-1-1-238.ap-south-1.compute.internal",
            "private_ip": "10.1.1.238",
            "public_ip": "13.127.69.132",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0fc4c4b491bf41aae",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-038e0623e9459ee0b",
            "tags": {
              "Name": "MediaWiki-Green"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c7f8655f25796f86"
            ]
          },
          "dependencies": [
            "aws_security_group.allow-ssh-http",
            "aws_subnet.subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:019668444105:internet-gateway/igw-0f650ed126df03d90",
            "id": "igw-0f650ed126df03d90",
            "owner_id": "019668444105",
            "vpc_id": "vpc-0c20184bb83634e3c"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-00a73b5a041232cfa",
            "owner_id": "019668444105",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f650ed126df03d90",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-0c20184bb83634e3c"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta-subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0efdd1c362ef6cd8a",
            "route_table_id": "rtb-00a73b5a041232cfa",
            "subnet_id": "subnet-0b0745a8f9b99617b"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rtb",
            "aws_subnet.subnet",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-064e8aeca831a7c3d",
            "route_table_id": "rtb-00a73b5a041232cfa",
            "subnet_id": "subnet-038e0623e9459ee0b"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rtb",
            "aws_subnet.subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-ssh-http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:019668444105:security-group/sg-0c7f8655f25796f86",
            "description": "Allow ssh from anywhere and http from VPC",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c7f8655f25796f86",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.1.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow-ssh-http",
            "name_prefix": "",
            "owner_id": "019668444105",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0c20184bb83634e3c"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:019668444105:security-group/sg-0144c283f1717884a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0144c283f1717884a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "elb_sg",
            "name_prefix": "",
            "owner_id": "019668444105",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0c20184bb83634e3c"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:019668444105:subnet/subnet-0b0745a8f9b99617b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.1.0.0/24",
            "id": "subnet-0b0745a8f9b99617b",
            "map_public_ip_on_launch": true,
            "owner_id": "019668444105",
            "vpc_id": "vpc-0c20184bb83634e3c"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:019668444105:subnet/subnet-038e0623e9459ee0b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.1.1.0/24",
            "id": "subnet-038e0623e9459ee0b",
            "map_public_ip_on_launch": true,
            "owner_id": "019668444105",
            "vpc_id": "vpc-0c20184bb83634e3c"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:019668444105:vpc/vpc-0c20184bb83634e3c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-058e315eaeb421131",
            "default_route_table_id": "rtb-04ae45179cc977d89",
            "default_security_group_id": "sg-0b2338c0c9d5fccbb",
            "dhcp_options_id": "dopt-8bb647e0",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0c20184bb83634e3c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-04ae45179cc977d89",
            "owner_id": "019668444105"
          }
        }
      ]
    }
  ]
}